--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="O QUE É PYTHON, PARA QUE SERVE E POR QUE APRENDER?">
+    <link rel="icon" href="file:///C:/Users/Matheus/Downloads/kenzie%20brasil.webp" type="image/x-icon">
+    <title>Blog kenzie</title>
+</head>
+<body>
+<main>
+     <header>
+       <h1>Blog da kenzie</h1> 
+     </header> 
 
+    <nav>
+      <ul>
+         <li>
+           <a href="https://kenzie.com.br/"><strong>Kenzie</strong></a> 
+           <a href="https://kenzie.com.br/quem-somos"><strong> Quem somos </strong></a>
+           <a href="https://kenzie.com.br/curriculo"><strong>Formação</strong></a>
+           <a href="https://kenzie.com.br/pagamento"><strong>Pagamento</strong></a>
+           <a href="https://kenzie.com.br/parceiras"><strong>Para empresas</strong></a>
+           <a href="https://kenzie.com.br/faq"><strong>FAQ</strong></a>
+           <a href="https://kenzie.gupy.io/"><strong>Trabalhe conosco</strong></a>   
+         </li>
+      </ul>
+    </nav>
+
+    <div>
+        <img src="https://media-exp1.licdn.com/dms/image/C4E16AQH9WfpJAZhE7Q/profile-displaybackgroundimage-shrink_350_1400/0/1653585189161?e=1659571200&v=beta&t=duNBIfPJz88BVKyDI-fUQQ7IlgfWRXuEtDPT7xM_V1Q " alt="Somos kenzie">
+    </div>
+
+    <article>
+       <fieldset>
+            <h2>O QUE É PYTHON, PARA QUE SERVE E POR QUE APRENDER?</h2>
+
+        <p>Criado sob a filosofia de valorizar o esforço humano sobre o computacional, Python é uma linguagem de programação acessível e muito popular em setores emergentes da indústria de tecnologia.</p>
+        <h5>Escrito Por: Ugo Roveda</h5>
+        <a href="https://kenzie.com.br/blog/o-que-e-python/" target="_blank">Acessar Post</a>
+       </fieldset>
+    </article>
+        
+    <article>
+        <fieldset>
+            <h2>LÓGICA DE PROGRAMAÇÃO: O QUE É E POR QUE É IMPORTANTE?</h2>
+
+        <p>Lógica de programação é a organização coesa de uma sequência de instruções voltadas à resolução de um problema, ou à criação de um software ou aplicação.</p>
+        <h5>Escrito Por: Ugo Roveda</h5>
+        <a href="https://kenzie.com.br/blog/logica-de-programacao/" target="_blank">Acessar Post</a>
+        </fieldset>
+    </article>
+
+    <article>
+        <fieldset>
+            <h2>ÁREA DE TI: QUAL A ÁREA MAIS BEM PAGA E COMO INICIAR EM TI</h2>
+
+        <p>Como consequência do próprio avanço tecnológico em todo o mundo, pessoas especializadas para trabalhar neste setor são requisitadas o tempo todo e, quanto mais abrangentes forem suas experiências, melhor.</p>
+        <h5>Escrito Por: Ugo Roveda</h5>
+        <a href="https://kenzie.com.br/blog/area-de-ti/" target="_blank">Acessar Post</a>
+        </fieldset>
+    </article>
+
+    <article>
+        <fieldset>
+        <h2>O QUE É PLACEHOLDER E COMO UTILIZÁ-LO EM SEU PROJETO</h2>
+
+        <p>A expressão placeholder vem do inglês: place (lugar) + hold (segurar/reservar) e trata-se de um lugar reservado para um desígnio específico.</p>
+        <h5>Escrito Por: Daniel Kriger</h5>
+        <a href="https://kenzie.com.br/blog/placeholder/" target="_blank">Acessar Post</a>
+        </fieldset>
+    </article>
+</main>
+
+    <footer>
+         <fieldset>
+        <span>
+           <h2>Deseja reber nossas notícias em primeira mão?</h2> 
+           <h5>Basta inserir o seu e-mail de preferência</h5>
+        </span>
+
+        <form>
+            <label for="E-mail">E-mail</label>
+           <input type="text" name="E-mail" id="E-mail" placeholder="Digite seu email aqui..." required> 
+           <button type="submit">Receber newsletter</button>
+        </form> 
+         </fieldset>
+    </footer>
+</body>
+</html>
