--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="O QUE É PYTHON, PARA QUE SERVE E POR QUE APRENDER?">
-    <link rel="icon" href="file:///C:/Users/Matheus/Downloads/kenzie%20brasil.webp" type="image/x-icon">
+    <link rel="icon" href="./kenzie brasil.webp" type="image/x-icon">
     <title>Blog kenzie</title>
 </head>
 <body>
 <main>
      <header>
        <h1>Blog da kenzie</h1> 
-     </header> 
 
     <nav>
       <ul>
@@ -27,7 +26,7 @@
          </li>
       </ul>
     </nav>
-
+     </header>
     <div>
         <img src="https://media-exp1.licdn.com/dms/image/C4E16AQH9WfpJAZhE7Q/profile-displaybackgroundimage-shrink_350_1400/0/1653585189161?e=1659571200&v=beta&t=duNBIfPJz88BVKyDI-fUQQ7IlgfWRXuEtDPT7xM_V1Q " alt="Somos kenzie">
     </div>
